--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bower": "^1.8.8",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
