--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.10.15",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "pug": "^3.0.0"
   }
 }
