--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "redis": "^3.0.2",
+    "socket.io": "^3.0.3"
   }
 }
