--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "passport.socketio": "^3.7.0",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "socket.io-redis": "^6.0.1"
   }
 }
