--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.15",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "~1.9.1",
